--- a/xelsem/src/App.css
+++ b/xelsem/src/App.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #000;
+  background-color: #5ca2e4;
 }
 
 /* Container for the entire app */
